Revert "Is LINK_FLAGS_RELEASE to blame?"
This reverts commit f8cfc976e9b3e6d6f48e09664b9fe11453d608b5.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(Qt6 REQUIRED COMPONENTS Core Network WebSockets Sql)
 
 qt_standard_project_setup()
 qt_add_executable(akashi
+  data/icon/logo-akashi.rc
   src/commands/area.cpp
   src/commands/authentication.cpp
   src/commands/casing.cpp
@@ -129,6 +130,7 @@ if(WIN32)
     set_property(TARGET akashi PROPERTY WIN32_EXECUTABLE true)
     set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/data/icon/logo-akashi.rc")
     target_sources(akashi PRIVATE ${APP_ICON_RESOURCE_WINDOWS})
+    set_target_properties(akashi PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE /ENTRY:mainCRTStartup")
   endif()
 endif()
 
