--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,26 +33,24 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
       
-      - name: Install dependencies
-        uses: awalsh128/cache-apt-pkgs-action@latest
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v4
         with:
-          packages: qt5-qmake libqt5websockets5-dev g++ make
-          version: 1.0
+          aqtversion: '==3.1.*'
+          version: '6.5.3'
+          host: 'linux'
+          target: 'desktop'
+          arch: 'gcc_64'
+          cache: true
+          cache-key-prefix: install-qt-action
+          modules: 'qtwebsockets'
           
       # Runs a set of commands using the runners shell
-      - name: qmake and build
+      - name: Build
         run: |
           cd $GITHUB_WORKSPACE
-          qmake project-akashi.pro
-          make
-          mv bin/config_sample bin/config
-          
-      - name: Run tests
-        run: |
-            cd ${{github.workspace}}/bin_tests/
-            for test in ./unittest_*; do
-              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ./$test
-            done;
+          cmake .
+          cmake --build . --config Release
           
       - name: Upload binary
         uses: actions/upload-artifact@v4
@@ -71,23 +69,19 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
         with:
-          modules: qtwebsockets
+          version: 6.5.3
+          target: desktop
+          arch: win64_msvc2019_64
           cache: true
+          cache-key-prefix: install-qt-action
+          modules: 'qtwebsockets'
      
       - name: Build
         run: |
           cd $Env:GITHUB_WORKSPACE
-          qmake "CONFIG += qtquickcompiler" project-akashi.pro
-          nmake
-          windeployqt bin\akashi.exe --release --no-opengl-sw
-          mv bin\config_sample bin\config
-
-      - name: Deploy OpenSSL
-        run: |
-          curl https://download.firedaemon.com/FireDaemon-OpenSSL/openssl-1.1.1t.zip --output openssl-1.1.1.zip
-          tar -xf openssl-1.1.1.zip
-          copy .\openssl-1.1\x64\bin\libcrypto-1_1-x64.dll .\bin\libcrypto-1_1-x64.dll 
-          copy .\openssl-1.1\x64\bin\libssl-1_1-x64.dll .\bin\libssl-1_1-x64.dll
+          cmake . -D CMAKE_BUILD_TYPE=Release
+          cmake --build . --config Release
+          windeployqt bin\akashi.exe --release --no-translations --no-compiler-runtime --no-opengl-sw
           
       - name: Upload zip
         uses: actions/upload-artifact@v4
