--- a/nutcase_behaviour/CMakeLists.txt
+++ b/nutcase_behaviour/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core Network)
 
 add_subdirectory(src/core)
 add_subdirectory(src/network)
