--- a/nutcase_behaviour/src/network/CMakeLists.txt
+++ b/nutcase_behaviour/src/network/CMakeLists.txt
@@ -35,6 +35,7 @@ install(TARGETS akashi_network
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
 install(DIRECTORY include/
