--- a/nutcase_behaviour/src/network/CMakeLists.txt
+++ b/nutcase_behaviour/src/network/CMakeLists.txt
@@ -1,10 +1,9 @@
 add_library(akashi_network SHARED
     include/akashi_network_global.h
     include/packet.h    src/packet.cpp
-    include/packetfactory.h
-    src/packetfactory.cpp
-    include/discordhook.h
-    src/discordhook.cpp
+    include/packetfactory.h src/packetfactory.cpp
+    include/discordhook.h   src/discordhook.cpp
+    include/serverpublisher.h   src/serverpublisher.cpp
 )
 
 add_library(akashi::Network ALIAS akashi_network)
