Add absolutely necessary splash messages

--- a/nutcase_behaviour/CMakeLists.txt
+++ b/nutcase_behaviour/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.19)
-project(akashi VERSION 1.9 LANGUAGES CXX)
+project(akashi VERSION 2.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -10,13 +10,30 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Network)
 
+set(PROJECT_CODENAME "kiwi")
+set(PROJECT_DISPLAY_NAME "Akashi")
+string(TIMESTAMP PROJECT_BUILD_DATE "%Y-%m-%d %H:%M:%S" UTC)
+
+execute_process(
+  COMMAND git rev-parse --short HEAD
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_COMMIT_HASH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  ERROR_QUIET
+)
+
+execute_process(
+  COMMAND git rev-parse --abbrev-ref HEAD
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_BRANCH
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  ERROR_QUIET
+)
+
 add_subdirectory(src/core)
 add_subdirectory(src/network)
-
-# Please add sub-libraries prior to this point, thanks.
 add_subdirectory(src/akashi)
 
-# Fuck it, we ball. No tests.
 option(BUILD_TESTS "Build tests" OFF)
 if(BUILD_TESTS)
     enable_testing()
@@ -26,21 +43,18 @@ endif()
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
-# Generate the config file that includes the exports
 configure_package_config_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/akashiConfig.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}/akashiConfig.cmake
     INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/akashi
 )
 
-# Generate version file
 write_basic_package_version_file(
     ${CMAKE_CURRENT_BINARY_DIR}/akashiConfigVersion.cmake
     VERSION ${PROJECT_VERSION}
     COMPATIBILITY SameMajorVersion
 )
 
-# Install config files
 install(FILES
     ${CMAKE_CURRENT_BINARY_DIR}/akashiConfig.cmake
     ${CMAKE_CURRENT_BINARY_DIR}/akashiConfigVersion.cmake
