Add software information

--- a/nutcase_behaviour/CMakeLists.txt
+++ b/nutcase_behaviour/CMakeLists.txt
@@ -32,6 +32,7 @@ execute_process(
 
 add_subdirectory(src/core)
 add_subdirectory(src/network)
+add_subdirectory(src/protocol)
 add_subdirectory(src/akashi)
 
 option(BUILD_TESTS "Build tests" OFF)
