add rate limit example to config.ini

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -52,6 +52,12 @@ message_floodguard=250
 ; The minimum time between game messages in the server, in miliseconds. Unlike message_floodguard, this timer is shared globally in the server.
 global_message_floodguard=0
 
+; If you send messages faster than this, you will be warned.
+packet_rate_limit_soft=10
+
+; If you send messages faster than this, you will be disconnected.
+packet_rate_limit_hard=20
+
 ; The amount of seconds without interaction till a client is marked as AFK.
 afk_timeout = 300
 
